# sadip

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  build_zenoh.sh  ci_node_release.bat  ci_node_release.sh  conanfile.py3  conanfile.txt  copy_debug_libs.sh  copy_release_libs.sh  docker_cmd.sh  docker_run.sh  fastdds_install.sh  fastdds_install_1.11.2.sh  fastdds_install_1.11.3.sh  fastdds_install_1.13.1.sh  fastdds_install_armv8.sh  fix_file_limits.sh  install_cmake.sh  install_cmake_latest.sh  install_fastddsgen.sh  install_gcc10.sh  install_gcc9.sh  install_go.sh  install_nvidia_cuda.sh  install_nvidia_cuda2.sh  install_podman.sh  install_ros2.sh  install_rust.sh  podman_build.sh  podman_run.sh  run.sh  run_armv8.sh  run_grafana.sh  run_x64.sh  sync_time_loop.sh  zenoh环境安装.md
cam-app/: CMakeLists.txt  CMakeUserPresets.json  README.txt  ci_cam_debug.bat  ci_cam_debug.sh  conanfile.txt
cam-app/config/: cam_cloud_app.ini  cam_edge_app.ini  databus_pwd.json5
cam-app/db/: DbBase.h  Idb.h
cam-app/db/rd/: rd.h
cam-app/dds/: ThreadSafeMap.h  TopicInfo.h  ZenohBase.h  ZenohPublisherListener.h  monitor.idl  monitor_cn.idl  zenoh_topic_manager.cpp  zenoh_topic_manager.h
cam-app/src/: CMakeLists.txt.linux  CMakeLists1.txt  CamService.cpp  CamTopic.cpp  CamTopic.h  DataInsert.cpp  DataInsert.h  MqttPublisher.cpp  MqttPublisher.h  MqttSubscriber.cpp  MqttSubscriber.h  MqttThreadClass.cpp  MqttThreadClass.h  TcpRecv.cpp  TcpRecv.h  UserTcpServer.cpp  UserTcpServer.h
cam-app/src/proto/: FusionPathDatas.pb.cc  FusionPathDatas.pb.h  FusionPathDatas.proto  MultiPathDatas.pb.cc  MultiPathDatas.pb.h  MultiPathDatas.proto  cam.pb.cc  cam.pb.h  cam.proto  v2x.pb.cc  v2x.pb.h  v2x.proto
cam-app/utils/: FileSplit.h  GetSystemInfo.h  ThreadSafeQueue.h  nodeInfo.h  pch.h  split.h  uuid.h
cam-app/utils/aws/s3/: FileWatcher.h  FloderWatch.h  FloderWatchMap.h  S3Singleton.cpp  S3Singleton.h  helper.cpp  helper.h
cam-app/utils/log/: BaseLog.h
config/: cam_cloud_app.ini  cam_cloud_service.ini  cam_edge_app.ini  cam_edge_service.ini  config1.json5  config_dev.json5  config_prod.json5  default-counters.csv  discovery_server.xml  general_db.json  groups.json  log_app.ini  monitor-app.ini  node.ini  node1.ini  node2.ini  prometheus.yml  registries.conf  run-app-amd64.sh  run-app-armv8.sh  run-app.sh  shadow  syncdb_recv_app.ini  syncdb_send_app.ini
config/containers/: containers.conf  containers_gpu.conf  nvidia-container-runtime.conf  registries_gpu.conf  storage.conf
config/k3s/: registries.yaml
db/rd/: rd.cpp
dds/: NodeInfo.h  TopicInfo.cpp  TopicInfo.h  ZenohSubscriberListener.h  monitor.pb.cc  monitor.pb.h  monitor.proto
docker/: Dockerfile.v3.armv8  Dockerfile.v3.cuda.armv8  Dockerfile.v3.cuda.deepstream.armv8  Dockerfile.v3.deepstream  Dockerfile.v3.ecal.cuda.armv8  Dockerfile.v3.x64
docs/: 自主交通集成中台设计(1227).docx  边缘云指标1114.pptx  边缘侧软硬件技术架构标准(v0.4).docx  集成中台主题设计.xlsx
monitor-app/src/: CMakeLists.txt  MonitorService.cpp  MonitorTopic.cpp  MonitorTopic.h
node/src/: CMakeLists.linux.txt  CMakeLists.txt  CMakeLists_armv8.txt  CommandExecutor.h  ExecManager.h  FileTopic.cpp  FileTopic.h  LogMonitor.cpp  LogMonitor.h  LogMonitorManager.cpp  LogMonitorManager.h  LogTopic.cpp  LogTopic.h  MachineStateTopic.cpp  MachineStateTopic.h  NodeCmdTopic.cpp  NodeCmdTopic.h  NodeCmdWorker.cpp  NodeCmdWorker.h  NodeTopic.cpp  NodeTopic.h  PingTopic.cpp  PingTopic.h  PodmanManager.cpp  PodmanManager.h  ProcessManager.cpp  ProcessManager.h  file.idl  file_cn.idl  log.idl  log_cn.idl  main.cpp  node.capnp  node.idl  node_cn.idl  run_node.sh
node/src/hwinfo/: network.cpp
node/src/hwinfo/apple/: network.cpp
node/src/hwinfo/linux/: network.cpp
node/src/hwinfo/windows/: network.cpp
node/src/include/hwinfo/: network.h
node/src/proto/: file.pb.cc  file.pb.h  file.proto  log.pb.cc  log.pb.h  log.proto  node.pb.cc  node.pb.h  node.proto
test_package/: conanfile.py
utils/: SnowFlake.h  common.h  msgQueue.h  parseJson.h  times.h
utils/config/: ConfigMap.cpp  ConfigMap.h
utils/ini/: ini.cpp
utils/mqtt/: response_options.h
